2000-08-15  Daniel Egger  <egger@suse.de>

	* app/commands.c:
	* app/commands.h:
	* app/diagram.c:
	* app/display.c:
	* app/menus.c:
	* app/select.c: First big patch to get the menus
	working again in the international version. Copied
	some code written by Sven and me from GIMP and
	thus implemented automatic tearoffmenu creation and
	proper translation. I also removed that pseudo
	radiomenu hack and cleaned up several translation
	hacks which have never really worked. All in all
	this is part I of the big menu patch. Enjoy and tell
	me if you detect any problems.

2000-08-14  Daniel Egger  <egger@suse.de>

	* sheets/UML.sheet: Changed one German translation as
	suggested by Heribert Schuetz <hs@heribert-schuetz.de>.

2000-08-10  Fredrik Hallenberg  <hallon@lysator.liu.se>

	* app/diapagelayout.c:
	* lib/diagramdata.c:
	* lib/diagramdata.h:
	* lib/Makefile.am:
	* lib/paper.c:
	* lib/paper.h: honour PAPERCONF env variable and /etc/papersize when
	selecting paper size for a new diagram. TODO: Use libpaper if 
	available and use gnome_paper-stuff if using GNOME.

	* sheets/Electric.sheet: fixed typo.
	
2000-08-08  James Henstridge  <james@daa.com.au>

	* po/README: added a readme file to tell translators to translate
	the .sheet files as well.

	* app/commands.c (help_about_callback): fix small bug where we tried
	to gdk_bitmap_unref() the mask for the about box image, even though
	it was NULL.  Now check for a NULL mask.

2000-08-07  Daniel Egger  <egger@suse.de>

	* sheets/*.sheet: Added translations for the name
	in the toolbar tab. Brushed up some descriptions 
	and some translations a bit.

2000-08-06  James Henstridge  <james@daa.com.au>

	* plug-ins/svg/render_svg.c (new_svg_renderer): update public
	identifier and dtd url for SVG output.
	(new_svg_renderer): fix the output of the viewBox output.  The
	second two numbers are the width and height -- not the right
	and bottom sides of the box.

	* shapes/*/*.shape: update svg namespace URI.
